[tool.poetry]
name = "pkce-client"
version = "0.2.0"
description = "A Python package to deal with OAuth PKCE authentication flow to generate JWT tokens from desktop apps."
authors = [
    "Camilo Terevinto <software@camiloterevinto.com>",
    "Ted Johnson <ted.johnson87@gmail.com>"
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [ "oauth", "oidc", "pkce" ]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
